[package]
name = "passinglink"
authors = ["Josh Gao <josh@jmgao.dev>"]
license = "GPL-3.0"

version = "0.0.0"
edition = "2018"

[dependencies]
log = "0.4"

cortex-m = { version = "0.6", features = ["inline-asm", "const-fn"] }
cortex-m-rt = { version = "0.6.6", features = ["device"] }
cortex-m-semihosting = { version = "0.3.3", features = ["inline-asm"] }
panic-semihosting = { version = "0.5", features = ["inline-asm"] }

cortex-m-rtfm = { version = "0.4", features = ["timer-queue"] }
proper = { path = "vendor/proper" }
heapless = { path = "vendor/heapless" }
stm32f1xx-hal = { path = "vendor/stm32f1xx-hal", features = ["rt", "stm32f103"] }
usb-device = { path = "vendor/usb-device" }
stm32f103xx-usb = { path = "vendor/stm32f103xx-usb" }

[patch.crates-io]
heapless = { path = "vendor/heapless" }
stm32f1xx-hal = { path = "vendor/stm32f1xx-hal" }

[features]
default = ["color"]
color = []
